# fastapi_pj

./: .gitignore  README.md  pyproject.toml
fastapi_pj/: secrets.json
fastapi_pj/app/: book_scraper.py  config.py  main.py
fastapi_pj/app/models/: __init__.py  book.py
fastapi_pj/app/templates/: index.html
tests/: test_book_project.py
