[tool.poetry]
name = "book_project"
version = "0.1.0"
description = ""
authors = ["jajinmori <jajinmori1@naver.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
flake8 = "^4.0.1"
black = "^22.6.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
Jinja2 = "^3.1.2"
aiofiles = "^0.8.0"
odmantic = "^0.5.0"
pymongo = {extras = ["srv"], version = "^4.2.0"}
aiohttp = "^3.8.1"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"